UI Launch Config
App Theme added to themes.xml
Config navigation component
Add required tags to activity_main.xml
create toolbar_layout.xml
create MoviesFragment.kt

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,5 @@
         android:id="@+id/moviesFragment"
         android:name="com.github.moviesapi.ui.movies_list.MoviesFragment"
         android:label="fragment_main"
-        tools:layout="@layout/fragment_main" />
+        tools:layout="@layout/fragment_movies" />
 </navigation>
