--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="bg_color">#1D1D27</color>
     <color name="text_hint_color">#5C5C6A</color>
     <color name="text_color">#FFFFFF</color>
-    <color name="rate_color">#f95862ff</color>
+    <color name="rate_color">#F95862</color>
     <color name="score_color">#71c180ff</color>
 
 </resources>
