--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -94,7 +94,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/small"
             android:fontFamily="@font/montserrat_medium"
-            android:text="@{Double.toString(item.vote_average) + ` Vote`}"
+            android:text="@{Double.toString(item.vote_average)}"
             android:textColor="@color/text_color"
             android:textSize="@dimen/small_text"
             app:layout_constraintBottom_toBottomOf="@id/list_item_rate"
@@ -107,7 +107,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/xx_small"
             android:fontFamily="@font/montserrat_medium"
-            android:text="@{Integer.toString(item.vote_count)}"
+            android:text="@{Integer.toString(item.vote_count)+ ` Vote`}"
             android:textColor="@color/text_hint_color"
             android:textSize="@dimen/small_text"
             app:layout_constraintEnd_toEndOf="parent"
