--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,24 @@
         android:id="@+id/moviesFragment"
         android:name="com.github.moviesapi.ui.movies_list.MoviesFragment"
         android:label="fragment_main"
-        tools:layout="@layout/fragment_movies" />
+        tools:layout="@layout/fragment_movies">
+        <action
+            android:id="@+id/action_moviesFragment_to_showMovieFragment"
+            app:destination="@id/showMovieFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/showMovieFragment"
+        android:name="com.github.moviesapi.ui.show_movie.ShowMovieFragment"
+        tools:layout="@layout/fragment_show_movie"
+        android:label="ShowMovieFragment">
+        <argument
+            android:name="movieId"
+            android:defaultValue="0"
+            app:argType="integer" />
+
+        <argument
+            android:name="id"
+            app:argType="string" />
+
+    </fragment>
 </navigation>
