--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -41,6 +41,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
+            android:requiresFadingEdge="vertical"
             android:layout_height="match_parent"
             tools:listitem="@layout/list_item" />
 
