--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
 
 
     <color name="bg_color">#1D1D27</color>
+    <color name="bg_color_alpha">#001D1D27</color>
+    <color name="bg_color_alpha_two">#F91D1D27</color>
     <color name="text_hint_color">#5C5C6A</color>
     <color name="text_color">#FFFFFF</color>
     <color name="rate_color">#F95862</color>
